# presets

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: presetsConfig.cmake.in  unit_test_integration.cmake
include/presets/: presets.hpp
src/: presets.cc
src/presets/: error_handling.hpp  unordered_string_map.hpp
tests/: CMakeLists.txt  presets_ut.cc
tests/presets/: cfg-presets.json  cfg-variables.json  presets_v2.json  var_invalid_ref_top.json  var_preset_1.json  var_preset_invalid_ref.json  var_preset_top.json
